Fix of SHRINE-SHRINE-1470 [Webclient] Define order of Events dropdown is overlapping with other operator and instruction text
Former-commit-id: 8b069cb547bd1d9a649c88f3944aaa426c1c9708
Former-commit-id: 5e837afefae6e25f45b209305989ec0ce5f07258

--- a/shrine-webclient/src/main/html/js-i2b2/cells/CRC/assets/vwQryTool.css
+++ b/shrine-webclient/src/main/html/js-i2b2/cells/CRC/assets/vwQryTool.css
@@ -259,7 +259,7 @@ DIV#crcQueryToolBox DIV#queryBalloonBox {
 	padding:0px 0px 0px 0px;
 	position:absolute;
 	width:100%;
-	z-index:10;
+	z-index:0;
 }
 DIV#crcQueryToolBox DIV.queryBalloon {
 	background:#FFFF99;
